Only Show Realm-Enabled Options

--- a/src/main/resources/theme-resources/messages/messages_de.properties
+++ b/src/main/resources/theme-resources/messages/messages_de.properties
@@ -7,3 +7,4 @@ mfaEnforcerWebAuthnOptionButton=WebAuthn nutzen
 mfaEnforcerTOTPOptionTitle=Zeitbasierte Einmalkennw\u00F6rter (TOTP) mit Authentikator-App
 mfaEnforcerTOTPOptionDescription=Nutzen Sie eine TOTP-App auf ihrem Mobilger\u00E4t oder einen Passwortmanager (z.B. Enpass, KeePass), die zeitbasiert neue Zugangscodes generieren.
 mfaEnforcerTOTPOptionButton=TOTP nutzen
+mfaEnforcerNoOptions=Keine Optionen aktiviert. Bitte kontaktieren Sie die Administratoren.
