--- a/src/main/resources/theme-resources/messages/messages_en.properties
+++ b/src/main/resources/theme-resources/messages/messages_en.properties
@@ -7,3 +7,4 @@ mfaEnforcerWebAuthnOptionButton=Use WebAuthn
 mfaEnforcerTOTPOptionTitle=Time-based One-Time Password with Authenticator App (TOTP)
 mfaEnforcerTOTPOptionDescription=Use a TOTP app on your mobile device or a password manager (e.g. Enpass, KeePass) for generating time-based access codes.
 mfaEnforcerTOTPOptionButton=Use TOTP
+mfaEnforcerNoOptions=There are no options enabled. Please contact your administrator.
