--- a/src/main/resources/theme-resources/messages/messages_de.properties
+++ b/src/main/resources/theme-resources/messages/messages_de.properties
@@ -3,6 +3,7 @@ mfaEnforcerHello=Hallo
 mfaEnforcerExplanation=Richten Sie bitte eine Multi-Faktor-Authentifizierung ein, um das Risiko von Phishing-Attacken zu reduzieren. Bitte w\u00E4hlen Sie eine der folgenden Optionen:
 mfaEnforcerWebAuthnOptionTitle=WebAuthn mit FIDO Security-Token
 mfaEnforcerWebAuthnOptionDescription=Sie ben\u00F6tigen einen FIDO Security-Token.
+mfaEnforcerWebAuthnOptionPassKeysDescription=Alternativ ist auch die Nutzung von PassKeys mit einem modernen Browser (z.B. Google Chrome, Safari) m\u00F6glich.
 mfaEnforcerWebAuthnOptionButton=WebAuthn nutzen
 mfaEnforcerTOTPOptionTitle=Zeitbasierte Einmalkennw\u00F6rter (TOTP) mit Authentikator-App
 mfaEnforcerTOTPOptionDescription=Nutzen Sie eine TOTP-App auf ihrem Mobilger\u00E4t oder einen Passwortmanager (z.B. Enpass, KeePass), die zeitbasiert neue Zugangscodes generieren.
